--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Those are the PHPCodeSniffer to be used to enforce the updated coding standards.
+This is the PHPCodeSniffer standard to be used to enforce the updated coding standards.
